# nostr-cpn-girl

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RustConfig  compose.yml  config.toml.example
.devcontainer/: Dockerfile  compose.dev.yml  compose.yaml  compose.yml  devcontainer.json
migrations/2023-04-21-124956_create_users/: up.sql
src/: config.rs  lib.rs  main.rs  models.rs  schema.rs
