[package]
name = "nostr-cpn-girl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.21"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", features = ["postgres"] }
dotenvy = "0.15"
regex = "1"
unicode-normalization = "0.1.20"
